# egn_hackathon_2024_hack_hustlers

./: .environment  .gitignore  README.md  examples.py  gradio_app.py  kickasslogo_base64.txt  pyproject.toml
examples/: app_example.py  db_example.py
queens_speeches/speeches/: 2001.txt  2002.txt  2003.txt  2004.txt  2005.txt  2006.txt  2007.txt  2008.txt  2009.txt  2010.txt  2011.txt  2012.txt  2013.txt  2014.txt  2015.txt  2016.txt  2017.txt  2018.txt  2020.txt
src/: app_interface.py  azure_client.py  chatgpt_examples.py  create_vector_databases.py  dronning_chat.py  no_vector_db.py  test_query_with_bot.py
